changes to github and added forms.html

--- a/github.html
+++ b/github.html
@@ -18,17 +18,17 @@
 <header>
     <h4><img src="img/codeup-arrow.png" alt="Codeup Logo" height="30px" width="30px">Codeup</h4>
     <ul class="horizontal">
-        <li>Repositories</li>
-        <li>People</li>
-        <li>Teams</li>
-        <li>Projects</li>
-        <li>Settings</li>
+        <li><button>Repositories</button></li>
+        <li><button>People</button></li>
+        <li><button>Teams</button></li>
+        <li><button>Projects</button></li>
+        <li><button>Settings</button></li>
     </ul>
 </header>
 <main>
     <section class="outside-border">
-    <h5>Codeup's dev team</h5>
-    <table>
+    <h4 id="greybar">Codeup's dev team</h4>
+    <table cellspacing="30px">
         <tr>
             <td>Kent Beck</td>
             <td>Member</td>
@@ -55,7 +55,7 @@
 </main>
 <hr>
 <footer>
-    <ul class="horizontal">
+    <ul class="horizontal footer">
         <li>&copy; 2018 Github Inc.</li>
         <li><a class="black" href="https://help.github.com/articles/github-terms-of-service/">Terms</a></li>
         <li><a class="black" href="https://help.github.com/articles/github-privacy-statement/">Privacy</a></li>
@@ -64,7 +64,7 @@
         <li><a class="black" href="https://help.github.com/">Help</a></li>
     </ul>
 
-    <ul class="horizontal right-align">
+    <ul class="horizontal right-align footer">
         <li><a class="black" href="https://github.com/contact">Contact Github, Inc.</a></li>
         <li><a class="black" href="https://developer.github.com/">API</a></li>
         <li><a class="black" href="https://services.github.com/">Training</a></li>
