Added better expiration date feature

--- a/checkout.html
+++ b/checkout.html
@@ -29,14 +29,12 @@
         </label>
         <br>
 
-            <label for="expiration-month">Expiration Date
-                <br>
-                Month
-                <input id="expiration-month" type="text" name="expiration-month" placeholder="00" required>
-            </label>
-            <label for="expiration-year">Year
-                <input id="expiration-year" name="expiration-year" type="text" placeholder="0000" required>
-            </label>
+
+        <label for="month">Expiration Date</label>
+        <br>
+        <input type="month" name="month" id="month">
+
+
         <br>
         <label for="security-code">Security Code
             <br>
