better label for expiration date

--- a/checkout.html
+++ b/checkout.html
@@ -30,9 +30,9 @@
         <br>
 
 
-        <label for="month">Expiration Date</label>
+        <label for="expiration-date">Expiration Date</label>
         <br>
-        <input type="month" name="month" id="month">
+        <input type="month" name="expiration-date" id="expiration-date">
 
 
         <br>
