--- a/checkout.html
+++ b/checkout.html
@@ -10,7 +10,7 @@
     <form method="POST" action="https://request-inspector.glitch.me/">
         <label for="card-type">Card Type
             <br>
-        <select name="card-type" autofocus="autofocus">
+        <select  id="card-type" name="card-type" autofocus="autofocus">
             <option value="amex">American Express</option>
             <option value="mastercard">Mastercard</option>
             <option value="visa">Visa</option>
