styled a little bit

--- a/login.html
+++ b/login.html
@@ -2,11 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/login.css">
     <title>Login</title>
 </head>
 <body>
 <h1>Login</h1>
+    <fieldset class="width-80">
     <form method="POST" action="https://request-inspector.glitch.me/">
+
         <label for="username">Username
         <input id="username" name="username" type="text" placeholder="username" autofocus="autofocus" required>
         </label>
@@ -24,6 +27,7 @@
         </label>
         <br>
         <button type="submit">Login</button>
+    </fieldset>
     </form>
 
 </body>
