added styling, added randomized pictures

--- a/welcome.html
+++ b/welcome.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Welcome</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Anton|Bungee+Shade|Montserrat|Quicksand" rel="stylesheet">
 </head>
 <body>
 <header>
-  <h1 id="top">Welcome to Veridian Dynamics!</h1>
-    <p>At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong><em>technology.</em></strong></p>
+  <h1 class="fancy-header" id="top">Welcome to Veridian Dynamics!</h1>
+    <p id="header-script">At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong><em>technology.</em></strong></p>
 </header>
 <main>
     <hr>
@@ -34,39 +36,40 @@
     <!--Images here-->
   <table>
       <tr>
-          <td><img src="img/computers.png" alt="Computers on a desk" height="300px" width="500px"></td>
-          <td><img src="img/man_walking.jpg" alt="Man walking in a field" height="300px" width="500px"></td>
+          <td><img src="https://picsum.photos/200/300/?random"></td>
+          <td><img src="https://picsum.photos/200/300/?random"></td>
       </tr>
       <tr>
-          <td><img src="img/sea-at-sunset.jpg" alt="Sunset over the ocean" height="300px"width="500px" ></td>
-          <td><img src="img/Talking_Window.jpeg" alt="Man and Woman talking by a window" height="300px" width="500px"></td>
+          <td><img src="https://picsum.photos/200/300/?random" ></td>
+          <td><img src="https://picsum.photos/200/300/?random" width="500px"></td>
       </tr>
   </table>
 
-
     <h2>Our Product</h2>
-    <table>
-        <tr>
+
+    <table class="product">
+        <tr class="product-row">
             <th>Plan</th>
             <th>Price</th>
             <th>Features</th>
         </tr>
-        <tr>
+        <tr class="product-row">
             <td>Starter</td>
             <td>$99</td>
             <td>Base Technology</td>
         </tr>
-        <tr>
+        <tr class="product-row">
             <td>Advanced</td>
             <td>$199</td>
             <td>Additional Features</td>
         </tr>
-        <tr>
+        <tr class="product-row">
             <td>Premium</td>
-            <td>$499</td></td>
+            <td>$499</td>
             <td>Unlimited Support</td>
         </tr>
     </table>
+
 </main>
   <footer>
     <h6><em>All products come with our quality guarantee</em><sup>TM</sup>.</h6>
