--- a/grid-layout.html
+++ b/grid-layout.html
@@ -9,7 +9,7 @@
     <title>Grid System</title>
 </head>
 <body>
-
+<div class="container">
 <div class="row">
     <div class="column one-half">1/2</div>
     <div class="column one-half">1/2</div>
@@ -49,7 +49,7 @@
     <div class="column one-eighth">1/8</div>
     <div class="column one-eighth">1/8</div>
 </div>
-
+</div>
 
 </body>
 </html>
