css edits, html page edits

--- a/flower-order.html
+++ b/flower-order.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/grid-layout.css">
     <link rel="stylesheet" href="css/flower-order-css.css">
 
-    <title>Flower Shop Order Form</title>
+    <title>Just Because Flowers</title>
 </head>
 
 <body>
@@ -28,13 +28,15 @@
     <div class="nav-height nav-wrapper #ff8a80 red accent-1">
         <a href="#!" class="brand-logo white-text text-darken-4"><img class="logo" src="img/flower-shop-logo.png"</a>
         <ul class="right hide-on-med-and-down">
-            <li><a class="white-text text-darken-4" href="sass.html">Sass</a></li>
-            <li><a class="white-text text-darken-4" href="badges.html">Components</a></li>
+            <li><a class="white-text text-darken-4" href="sass.html">Order</a></li>
+            <li><a class="white-text text-darken-4" href="badges.html">Gallery</a></li>
             <!-- Dropdown Trigger -->
-            <li><a class="dropdown-trigger white-text text-darken-4" href="#!" data-target="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>
+            <li><a class="dropdown-trigger white-text text-darken-4" href="#!" data-target="dropdown1">Flowers<i class="material-icons right">arrow_drop_down</i></a></li>
         </ul>
     </div>
 </nav>
+<div class="logo-background"></div>
+
 <div class="container">
     <div>
         <h1 class="fancy-header top-100 left-3">Large header text<br>goes here</h1>
@@ -59,13 +61,20 @@
 
     </div>
 
-
     <div>
          <img class="top-negative-50 three-fourths float-left" src="img/flower-shop-2.jpg">
     </div>
-<div>
-    <img class="floating-logo offset-one-fourth" src="img/flower-shop-logo.png">
-</div>
+    <div>
+        <img class="floating-logo offset-one-fourth" src="img/flower-shop-logo.png">
+    </div>
+    <div class="floating-logo-background"></div>
+
+    <div class="mid-paragraph offset-three-fourths">
+        <p>Lorem ipsum dolor amet cronut
+            Lorem ipsum dolor amet cronut artisan organic vegan pug. DIY gentrify. Helvetica direct trade cornhole plaid, flannel before they sold out master cleanse godard iPhone drinking vinegar art party. Etsy direct trade cornhole plaid, flannel before they sold out master cleanse godard iPhone cleanse godard iPhone art party la croix DIY gentrify. Helvetica drinking vinegar.
+            Lorem ipsum dolor amet cronut artisan organic vegan pug. DIY gentrify. Helvetica direct trade cornhole plaid, flannel before they sold out master cleanse godard iPhone drinking vinegar art party. Etsy direct trade cornhole plaid, flannel before they sold out master cleanse godard iPhone cleanse godard iPhone art party la croix DIY gentrify. Helvetica drinking vinegar.
+            Lorem ipsum dolor amet cronut artisan organic vegan pug. DIY gentrify. Helvetica direct trade cornhole plaid, flannel before they sold out master cleanse godard iPhone drinking vinegar art party. Etsy direct trade cornhole plaid, flannel before they sold out master cleanse godard iPhone cleanse godard iPhone art party la croix DIY gentrify. Helvetica drinking vinegar.artisan organic vegan pug. cleanse godard iPhone cleanse godard iPhone art party la croix DIY gentrify. Helvetica DIY gentrify. Helvetica direct trade cornhole plaid, flannel before they sold out master cleanse godard iPhone drinking vinegar art party. Etsy direct trade cornhole plaid, flannel before they sold out master cleanse godard iPhone cleanse godard iPhone art party la croix DIY gentrify. Helvetica drinking vinegar.</p>
+    </div>
 
 </div>
 <div class="mid-page quote-box offset-one-third">
