--- a/order-pizza.html
+++ b/order-pizza.html
@@ -14,14 +14,20 @@
 <div class=".navbar-md">
     <nav class="navbar navbar-light bg-light">
         <a class="navbar-brand active">Pizza World</a>
-        <a class="navbar-brand"><a href="#size-crust">Order Online</a>
+        <a class="navbar-brand left-align"><a href="#size-crust">Order Online</a>
         <a class="navbar-brand">Menu</a>
         <form class="form-inline">
-            <input class="form-control mr-sm-2" type="search" placeholder="Zipcode" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search stores near you!</button>
-            <img class="log-in-head" src="img/login-icon.jpg">
-            <a class="navbar-brand">Sign Up</a>
+
+
+                <input class="form-control mr-sm-2 search-store" type="search" placeholder="Zipcode" aria-label="Search">
+            <button class=" btn btn-outline-success my-2 my-sm-0" type="submit">Search stores near you!</button>
+           <div class="float-right">
+            <img class=" float-right log-in-head" src="img/login-icon.jpg">
+            <a class="sign-up navbar-brand">Sign Up</a>
+           </div>
+
         </form>
+        </a>
     </nav>
 
 </div>
@@ -54,7 +60,7 @@
             <a class="nav-link" href="#choose-toppings"><span class="badge badge-pill badge-secondary">3</span>Toppings</a>
         </li>
     </ul>
-    <div class="container">
+    <div>
         <div class="card" style="width: 100%;">
             <a name="size-crust"></a>
             <li class="list-group-item header-blue">Choose Size and Crust</li>
@@ -80,12 +86,12 @@
             </ul>
 
         </div>
-
     </div>
+
         <footer>
             <button class="form-button" type="submit">Next Step ></button>
         </footer>
-    </div>
+
         </div>
 
             <div class="card">
@@ -127,6 +133,7 @@
                         </select>
                     </ul>
                 </div>
+                </div>
 
                     <footer>
 
@@ -139,7 +146,7 @@
                             </label>
                         </div>
                     </footer>
-                </div>
+
 </div>
 
 
@@ -168,16 +175,17 @@
                                     <li class="radio list-group-item"><input type="checkbox" name="toppings" value="onions"> Onions</li>
                                     <li class="radio list-group-item"><input type="checkbox" name="toppings" value="Jalapeno-peppers"> Jalapeno Peppers</li>
                                 </ul>
-
+                    </div>
                             </div>
                     <footer>
                         <button class="form-button" type="submit"><img class="checkout-icon" src="img/Shopping-Cart-Icon-white.png"> Checkout</button>
                     </footer>
-                   </div>
+
                 </div>
 <!--Bootstrap code for javascript-->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+</div>
 </body>
 </html>
