--- a/loops.html
+++ b/loops.html
@@ -6,7 +6,9 @@
 </head>
 <body>
 
+
 <script src="js/while.js"></script>
 <script src="js/for_loop.js"></script>
+<script src="js/break_and_continue.js"></script>
 </body>
 </html>
