--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -25,40 +25,104 @@
     culpa qui officia deserunt mollit anim id est laborum.
 </p>
 
+
+
+<button id="change-header">Change Header</button>
+<button id="subHeader-blue">Change Sub-Header to Blue</button>
+<button id="list-item-grey">Change Every Other li to Grey</button>
+<button id="li-one-to-blue">Change Item 1 to Blue</button>
+<button id="change-sub-paragraph">Change Sub-paragraph Text</button>
+
+
 <script>
     (function() {
         "use strict";
+
+
         // TODO: Uncomment next line and get the main header element by id
         var mainHeader = document.getElementById("main-header");
 
         // TODO: Set inner html of mainHeader to "JavaScript is Cool"
-            mainHeader.innerHTML = "Javascript is cool!";
+        //     mainHeader.innerHTML = "Javascript is cool!";
+
+       var changeHeader = function() {
+           mainHeader.innerHTML = "Javascript is cool!";
+       }
+
+       var headerButton = document.getElementById("change-header");
+        headerButton.addEventListener('click', changeHeader);
+
+    //----------------------------------------------------------------------------
 
         // TODO: Uncomment the next line and get the sub header element by id
         var subHeader = document.getElementById("sub-header");
 
         // TODO: Set the text color of subHeader to blue
-            subHeader.style.color = "blue";
+        //     subHeader.style.color = "blue";
+
+        var subHeaderBlue = function() {
+            subHeader.style.color = "blue"
+        }
+
+        var subHeaderButton = document.getElementById("subHeader-blue");
+        subHeaderButton.addEventListener('click', subHeaderBlue);
+
+    //----------------------------------------------------------------------------
+
         // TODO: Uncomment the next line and get all list items
         var listItems = document.getElementsByTagName("li");
 
         // TODO: Set text color on every other list item to grey
 
-        for (var i = 0; i < 4; i++) {
-            i=i+1;
-            listItems[i].style.color = "grey";
+        // for (var i = 0; i < 4; i++) {
+        //     i=i+1;
+        //     listItems[i].style.color = "grey";
+        // }
+
+        var listItemGrey = function() {
+            for (var i = 0; i < 4; i++) {
+                i=i+1;
+                listItems[i].style.color = "grey";
+            }
         }
+        var listItemGreyButton = document.getElementById("list-item-grey");
+        listItemGreyButton.addEventListener('click', listItemGrey);
+
+        //----------------------------------------------------------------------------
+
 
         // TODO: Set text color of li with dbid = 1 to blue
-          var blueItem = listItems[0];
-         console.log(blueItem);
-             blueItem.style.color = "blue";
+        //   var blueItem = listItems[0];
+        //  console.log(blueItem);
+        //      blueItem.style.color = "blue";
+
+        var liOneToBlue = function() {
+            var blueItem = listItems[0];
+            console.log(blueItem);
+            blueItem.style.color = "blue";
+        }
+
+        var liOneToBlueButton = document.getElementById("li-one-to-blue");
+        liOneToBlueButton.addEventListener('click', liOneToBlue);
+
+
+        //----------------------------------------------------------------------------
 
         // TODO: Uncomment the next line and get all elements with class name sub-paragraph
         var subParagraphs = document.getElementsByClassName("sub-paragraph");
             console.log(subParagraphs);
         // TODO: Change the text in the first sub paragraph to "Mission Accomplished!"
-        subParagraphs[0].innerHTML = "Mission Accomplished!";
+        // subParagraphs[0].innerHTML = "Mission Accomplished!";
+
+
+        var changeSubParagraph = function() {
+            subParagraphs[0].innerHTML = "Mission Accomplished!";
+        }
+
+        var changeSubParagraphButton = document.getElementById("change-sub-paragraph");
+        changeSubParagraphButton.addEventListener('click', changeSubParagraph);
+
+
     })();
 </script>
 </body>
