jQuery exercise 1 and 2 finished.

--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -6,6 +6,15 @@
 </head>
 <body>
 
+<h1 id="fancy-header" class="codeup">Hello this is the h1!</h1>
+<p id="first-paragraph" class="codeup">This is the paragraph tag.</p>
+<ul>
+    <li id="item-1" class="not-important">List item one.</li>
+    <li id="item-2" class="not-important">List item two.</li>
+    <li id="item-3" class="not-important">List item three.</li>
+</ul>
+
+<div id="div-bottom" class="codeup">This in in a div.</div>
 
 
 <script src="js/jquery-2.2.4.min.js"></script>
