--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -17,7 +17,7 @@
 <div id="div-bottom" class="codeup">This is in a div.</div>
 
 
-<script src="js/jquery-2.2.4.min.js"></script>
+<script src="js/jquery.js"></script>
 <script src="js/jquery_exercise.js"></script>
 </body>
 </html>
