--- a/konami.html
+++ b/konami.html
@@ -6,6 +6,10 @@
 <body>
 <h1>Konami Code</h1>
 <img id="code-activated"src="img/dance-now.gif">
+<img id="code-activated-dwight"src="https://media.giphy.com/media/l0MYt5jPR6QX5pnqM/giphy.gif">
+<img id="code-activated-pump"src="https://media.giphy.com/media/Is1O1TWV0LEJi/giphy.gif">
+<img id="code-activated-hockey"src="https://media.giphy.com/media/wrKbZmYC2IQ92/giphy.gif">
+
 
 <script src="js/jquery.js"></script>
 <script>
@@ -14,7 +18,9 @@
         alert( 'The DOM has finished loading!' );
 
         $("#code-activated").hide();
-
+        $("#code-activated-dwight").hide();
+        $("#code-activated-pump").hide();
+        $("#code-activated-hockey").hide();
 
     //to get the codes for each key
     // $(document).keyup(function(event){
@@ -30,11 +36,15 @@
 
         if (keys.toString() === konami.toString()){
             console.log("correct code!");
-            $("body").css("background-color", "red");
+            $("body").css("background-color", "blue");
             $("#code-activated").show();
-            
+            $("#code-activated-dwight").show();
+            $("#code-activated-pump").show();
+            $("#code-activated-hockey").show();
+
         } else {
         console.log("wrong code");
+
     }
 
     });
