--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -21,17 +21,33 @@
     </div>
 
 
-<div id="register" class="hidden">
-    <div class="alert alert-dismissible alert-warning" role="alert">
-        <span class="x-hide pointer">x</span>
-        <div class="thumbnail alert alert-dismissible">
-            <h1>Please Register!</h1>
-            <p><a href="#" class="btn btn-primary" role="button">Register</a></p>
+
+<!--Modal here:-->
+    <div id="register">
+    <div id="myModal" class="modal tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Register</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>Register to access the full website.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Register</button>
+                </div>
+            </div>
         </div>
     </div>
-</div>
+    </div>
 
-<!--<h2 class="hidden" id="register">Register!</h2>-->
+
+
+
 
 <h1>National Parks FAQ:</h1>
 <dl>
@@ -144,7 +160,29 @@
 
     })
 
-    $("#register").delay(8000).fadeIn(1000);
+    $("#register").delay(500).fadeIn(1000);
+
+
+
+
+    setTimeout(function(){
+            $('#myModal').modal({backdrop:false});
+        }, 8000);
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
     });
@@ -207,7 +245,6 @@
     .header {
         font-size: 40px;
         color: midnightblue;
-        font-family: pacifico;
         padding-top: .5em;
     }
 
