--- a/ajax-store.html
+++ b/ajax-store.html
@@ -50,7 +50,8 @@
 
             $("#insertProducts").html(table);
 
-        }).fail(function (jqXhr, status, error) {
+        })
+            .fail(function (jqXhr, status, error) {
             console.log("There was an error! Check the console for details");
             console.log("Response status: " + status);
             console.log("Error object: " + error);
